--- a/nms/bukkit-1.14/pom.xml
+++ b/nms/bukkit-1.14/pom.xml
@@ -14,8 +14,8 @@
     <name>xiavic-bukkit-1.14</name>
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
+            <groupId>com.destroystokyo.paper</groupId>
+            <artifactId>paper</artifactId>
             <version>1.14.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
